# guitarvideo2tab

./: .doc-version.json  .gitignore  README.md  pyproject.toml
docs/domain/: architecture.md  build-test.md  coding-style.md  features.md  source-index.md
docs/domain/decisions/: 001-multimodal-late-fusion-pipeline.md  README.md
src/guitarvideo2tab/: __init__.py  __main__.py  models.py  pipeline.py
src/guitarvideo2tab/audio/: technique.py  transcriber.py
src/guitarvideo2tab/fusion/: late_fusion.py
src/guitarvideo2tab/output/: tab_writer.py
src/guitarvideo2tab/preprocessing/: downloader.py  separator.py  stem.py
src/guitarvideo2tab/vision/: fret_estimator.py  fretboard.py  hands.py  technique.py
tests/: test_pipeline.py
tests/test_audio/: test_technique.py  test_transcriber.py
tests/test_fusion/: test_late_fusion.py
tests/test_models/: test_models.py
tests/test_output/: test_tab_writer.py
tests/test_preprocessing/: test_downloader.py  test_separator.py  test_stem.py
tests/test_vision/: test_fret_estimator.py  test_fretboard.py  test_hands.py  test_technique.py
