[project]
name = "guitarvideo2tab"
version = "0.0.1"
description = "기타 영상 → Guitar Pro TAB 멀티모달 변환 파이프라인"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "ffmpeg-python",
    "demucs>=4.0.0",
    "basic-pitch",
    "opencv-python",
    "ultralytics",
    "mediapipe",
    "torch",
    "torchvision",
    "pyguitarpro",
    "numpy",
    "scipy",
    "pandas",
]

[project.scripts]
guitarvideo2tab = "guitarvideo2tab.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guitarvideo2tab"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# importlib 모드: tests/ 가 namespace package(__init__.py 없음) 일 때
# 같은 basename 테스트 파일이 여러 디렉토리에 있어도 충돌하지 않음.
addopts = "--import-mode=importlib"
